...
            ResonoteStateIllustration(
                drawableRes = R.drawable.core_designsystem_resonote_empty_illustration,
                icon = icon,
            )
        },
        message = message,
        modifier = modifier.testTag("resonote-empty-state"),
        title = title,
        action = action,
    )
}

@Composable
...
